--- a/app/src/main/res/layout/layout_image_gridview.xml
+++ b/app/src/main/res/layout/layout_image_gridview.xml
@@ -2,12 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:padding="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/imageList"
         android:layout_width="196dp"
         android:layout_height="351dp"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sapa" />
