--- a/app/src/main/res/layout/layout_status_grid.xml
+++ b/app/src/main/res/layout/layout_status_grid.xml
@@ -67,13 +67,13 @@
         app:layout_constraintStart_toStartOf="@+id/statusTitle"
         app:layout_constraintTop_toBottomOf="@+id/statusTitle" />
 
-    <GridView
-        android:id="@+id/gridViewImage"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:numColumns="2"
-        app:layout_constraintStart_toStartOf="@+id/statusContent"
+        app:layout_constraintStart_toStartOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/statusContent" />
 
     <ImageButton
@@ -82,8 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
-        app:layout_constraintStart_toStartOf="@+id/gridViewImage"
-        app:layout_constraintTop_toBottomOf="@+id/gridViewImage"
+        app:layout_constraintStart_toStartOf="@+id/recyclerViewImage"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewImage"
         app:srcCompat="@drawable/heart_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
