--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,111 +75,47 @@
             app:shapeAppearanceOverlay="@style/roundedImage"
             app:srcCompat="@drawable/avatar" />
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/imgAddStory"-->
-<!--            android:layout_width="74dp"-->
-<!--            android:layout_height="74dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:background="@drawable/round_button"-->
-<!--            android:elevation="16dp"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/guideline3"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/textView2"-->
-<!--            app:srcCompat="@drawable/add_icon" />-->
+        <LinearLayout
+            android:id="@+id/addStory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/avatar">
 
-<!--        <TextView-->
-<!--            android:id="@+id/textView4"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="You"-->
-<!--            android:textColor="#93BC66"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textSize="15sp"-->
-<!--            android:fontFamily="@font/kufam"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/imgAddStory"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/imgAddStory"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/imgAddStory" />-->
+            <ImageButton
+                android:id="@+id/imgAddStory"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/round_button"
+                android:elevation="5dp"
+                app:srcCompat="@drawable/add_icon" />
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/imgAvatar"-->
-<!--            android:layout_width="74dp"-->
-<!--            android:layout_height="74dp"-->
-<!--            android:layout_marginStart="10dp"-->
-<!--            android:background="@drawable/border_gradient"-->
-<!--            android:elevation="8dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/imgAddStory"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/imgAddStory"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/imgAddStory" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/userStoryName1"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Mai"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textSize="15sp"-->
-<!--            android:fontFamily="@font/kufam"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/imgAvatar"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/imgAvatar"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />-->
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/userStory2"-->
-<!--            android:layout_width="74dp"-->
-<!--            android:layout_height="74dp"-->
-<!--            android:layout_marginStart="10dp"-->
-<!--            android:background="@drawable/border_gradient"-->
-
-<!--            android:elevation="8dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/imgAvatar"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/imgAvatar" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/userStoryName2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Phuc"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textSize="15sp"-->
-<!--            android:fontFamily="@font/kufam"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/userStory2"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/userStory2"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/userStory2" />-->
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/userStory3"-->
-<!--            android:layout_width="74dp"-->
-<!--            android:layout_height="74dp"-->
-<!--            android:layout_marginStart="10dp"-->
-<!--            android:background="@drawable/border_gradient"-->
-<!--            android:elevation="8dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/userStory2"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/userStory2"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/userStory2" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/userStoryName3"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Nghia"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textSize="15sp"-->
-<!--            android:fontFamily="@font/kufam"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/userStory3"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/userStory3"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/userStory3" />-->
-
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:fontFamily="@font/kufam"
+                android:gravity="center"
+                android:text="Add story"
+                android:textColor="#B2A4BD87"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/findFriends"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:background="@drawable/round_button"
             android:backgroundTint="@color/black"
             android:drawableEnd="@drawable/search_icon"
             android:drawableTint="@color/white"
             android:elevation="8dp"
+            android:layout_marginTop="10dp"
             android:ems="10"
             android:hint="Find all your friends"
             android:inputType="text"
@@ -187,15 +123,13 @@
             android:textColorHint="@color/white"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/addStory" />
 
         <LinearLayout
             android:id="@+id/linearLayout7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="15dp"
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -212,16 +146,16 @@
                     android:id="@+id/btnAssistant"
                     android:layout_width="85dp"
                     android:layout_height="85dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/semiround_button"
                     android:backgroundTint="#000000"
-                    android:elevation="16dp"
+                    android:elevation="8dp"
                     app:srcCompat="@drawable/forum" />
 
                 <TextView
                     android:id="@+id/textAssistant"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/kufam_bold"
                     android:text="Assistant"
                     android:textColor="#000000"
@@ -241,14 +175,14 @@
                     android:layout_height="85dp"
                     android:background="@drawable/semiround_button"
                     android:backgroundTint="#000000"
-                    android:elevation="16dp"
+                    android:layout_margin="10dp"
+                    android:elevation="8dp"
                     app:srcCompat="@drawable/clinical_notes" />
 
                 <TextView
                     android:id="@+id/textThirdParty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/kufam_bold"
                     android:text="Status"
                     android:textColor="#000000"
@@ -267,14 +201,14 @@
                     android:layout_height="85dp"
                     android:background="@drawable/semiround_button"
                     android:backgroundTint="#000000"
-                    android:elevation="16dp"
+                    android:layout_margin="10dp"
+                    android:elevation="8dp"
                     app:srcCompat="@drawable/qr_code" />
 
                 <TextView
                     android:id="@+id/textSetting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/kufam_bold"
                     android:text="QR Code"
                     android:textColor="#000000"
@@ -284,8 +218,9 @@
 
         <ImageView
             android:id="@+id/imgBanner"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -335,6 +270,20 @@
                 android:textSize="18sp" />
 
         </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="102dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/addStory"
+            app:layout_constraintEnd_toStartOf="@+id/guideline4"
+            app:layout_constraintStart_toEndOf="@+id/addStory"
+            app:layout_constraintTop_toTopOf="@+id/addStory">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/lvAllStory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
