--- a/app/src/main/res/layout/layout_create_story.xml
+++ b/app/src/main/res/layout/layout_create_story.xml
@@ -8,7 +8,7 @@
     tools:context=".CameraActivity">
 
     <ImageButton
-        android:id="@+id/buttonBack"
+        android:id="@+id/goBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -25,10 +25,9 @@
         android:layout_height="wrap_content"
         android:background="#DADADA"
         app:circularflow_radiusInDP="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.404"
-        app:layout_constraintStart_toEndOf="@+id/buttonBack"
-        app:layout_constraintTop_toTopOf="@+id/buttonBack"
+        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
+        app:layout_constraintStart_toEndOf="@+id/goBack"
+        app:layout_constraintTop_toTopOf="@+id/goBack"
         app:shapeAppearanceOverlay="@style/roundedImage"
         app:srcCompat="@drawable/avatar" />
 
@@ -41,62 +40,78 @@
         android:src="@drawable/search_icon"
         app:layout_constraintBottom_toBottomOf="@+id/avatar"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.883"
-        app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="@+id/avatar"
         app:tint="@color/white" />
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/imageCamera"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/cardView"
+        android:scaleType="centerCrop"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
-        app:cardCornerRadius="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCapture"
+        app:layout_constraintBottom_toTopOf="@+id/buttonOke"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toBottomOf="@+id/avatar" >
+        app:layout_constraintTop_toBottomOf="@+id/avatar"
+        app:shapeAppearanceOverlay="@style/radiusImage" />
 
-        <androidx.camera.view.PreviewView
-            android:id="@+id/cameraView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
 
-    </androidx.cardview.widget.CardView>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/semiround_button"
+        android:backgroundTint="#80000000"
+        android:hint="Add a message"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp"
+        android:textColor="#fff"
+        android:textColorHint="#fff"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageCamera"
+        app:layout_constraintEnd_toEndOf="@+id/imageCamera"
+        app:layout_constraintStart_toStartOf="@+id/imageCamera" />
 
     <ImageButton
-        android:id="@+id/buttonCapture"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:id="@+id/buttonOke"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/button_camera"
+        android:background="@drawable/tick"
+        android:backgroundTint="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
+        app:layout_constraintStart_toEndOf="@+id/buttonBack" />
 
     <ImageButton
-        android:id="@+id/flipCamera"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:id="@+id/buttonCancel"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop"
+        android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
-        android:src="@drawable/camera_flip"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonCapture"
+        android:src="@drawable/cancel"
+        app:tint="#fff"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonOke"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.845"
-        app:layout_constraintStart_toEndOf="@+id/buttonCapture"
-        app:layout_constraintTop_toTopOf="@+id/buttonCapture" />
+        app:layout_constraintTop_toTopOf="@+id/buttonOke"/>
 
     <ImageButton
-        android:id="@+id/flashToggle"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:id="@+id/buttonBack"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@android:color/transparent"
-        android:src="@drawable/flash_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonCapture"
+        android:scaleType="centerCrop"
+        android:src="@drawable/back"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonOke"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/buttonCapture" />
+        app:layout_constraintTop_toTopOf="@+id/buttonOke"
+        app:tint="#fff" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
